// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupCard /> should render a group card with body contents and  their actions  1`] = `
<styled.div
  color="neutral"
  data-component-type="group_card"
>
  <styled.div>
    <styled.div
      color="neutral"
      hasClickHandler={false}
      hasHoverStyle={true}
      isExpanded={false}
      onClick={[Function]}
    >
      <styled.div>
        <styled.div>
          <div>
            headingContent
          </div>
        </styled.div>
        <styled.button
          color="neutral"
          hasClickHandler={false}
          hasParentHoverStyle={true}
          isExpanded={false}
        >
          <styled.span>
            <Memo(FontAwesomeIcon)
              icon="chevron-down"
              type="solid"
            />
          </styled.span>
        </styled.button>
      </styled.div>
    </styled.div>
  </styled.div>
  <styled.div
    color="neutral"
    isExpanded={false}
  >
    <BodyCard
      actionButtonDropdownMenu={[Function]}
      color="neutral"
      extraContent={
        <div>
          mainContent
        </div>
      }
      key="0"
      mainContent={
        <div>
          mainContent
        </div>
      }
    />
    <BodyCard
      actionButtonDropdownMenu={[Function]}
      color="neutral"
      extraContent={
        <div>
          mainContent
        </div>
      }
      key="1"
      mainContent={
        <div>
          mainContent
        </div>
      }
    />
  </styled.div>
</styled.div>
`;

exports[`<GroupCard /> should render a group card without body contents 1`] = `
<styled.div
  color="neutral"
  data-component-type="group_card"
>
  <styled.div>
    <styled.div
      color="neutral"
      hasClickHandler={false}
      hasHoverStyle={false}
      isExpanded={false}
      onClick={[Function]}
    >
      <styled.div>
        <styled.div>
          <div>
            headingContent
          </div>
        </styled.div>
      </styled.div>
    </styled.div>
  </styled.div>
</styled.div>
`;
